--- a/.env
+++ b/.env
@@ -1,6 +1,25 @@
 # Файл .env
+# PostgreSQL
 PG_DATABASE_PORT=5432
 PG_DATABASE_NAME=postgres
 PG_DATABASE_USER=postgres
 PG_DATABASE_PASSWORD=postgres
 PS_PORT=8080
+PG_DATABASE_HOST=postgres
+
+# PowerSync
+POWERSYNC_PORT=8080
+
+# CoreDNS
+COREDNS_PORT=50053
+
+# WireGuard
+WG_PUID=1000
+WG_PGID=1000
+WG_TZ=Europe/London
+WG_SERVERURL=auto
+WG_SERVERPORT=51820
+WG_PEERS=4
+WG_PEERDNS=auto
+WG_INTERNAL_SUBNET=10.13.13.0
+WG_ALLOWEDIPS=0.0.0.0/0
